# Mafioso-Bot

./: .gitignore  Dockerfile  LICENSE  MafiosoBot.py  README.md  config.py  config.toml.example  docker-compose.yml  globvars.py  info.json  main.py  pyproject.toml
commands/global/: ChannelVis.py  Clean.py  Info.py  Nick.py  Ping.py  Poll.py  Promote.py  Roles.py  Spectate.py  __init__.py
commands/ingame/: Backup.py  Channel.py  End.py  Export.py  Init.py  KillQueue.py  List.py  Role.py  Whisper.py  __init__.py
commands/pregame/: Emoji.py  Host.py  Join.py  List.py  Start.py  __init__.py
listeners/: __init__.py  on_command_error.py  on_ready.py
mafia/: Game.py  Pregame.py  Roles.json  State.py  data.py  errors.py  roles.json  util.py
mafioso/: Coding.py  Mafia Goon  Role sheet - Roles.csv  Role sheet - Roles.json  Roles.json  Vanilla Town.json  __init__.py  info.json  mafioso.py  signup  signup.py
mafioso/Roles/Mafia/: Mafia Goon.json
mafioso/Roles/Mafia/Mafia Unpowered/: Mafia Goon.json
mafioso/Roles/Town/: Archangel.json  Innocent Child.json  Jailkeeper.json  Known Human.json  Sorcerer.json  Town Alarmist.json  Town Cop.json  Town Evangelical.json  Town FBI Agent.json  Town Firefighter.json  Town Gunsmith.json  Town Mason.json  Town Monk.json  Town PI.json  Town Seer.json  Town Stalker.json  Town Tracker.json  Town Watchlisted.json  Vanilla Town.json  Wizard.json
mafioso/Roles/Town/Town Investigatives/: Town Cop.json  Town FBI Agent.json  Town Magicsmith.json  Town PI.json  Town Seer.json  (+2 more)
mafioso/Roles/Werewolves/: Werewolf Goon.json
(+38 files in other folders)
